--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,2 +1,2 @@
 
-add_executable(ArduinoGame main.cpp Nunchuck.cpp Vector3.h Vector2.h)
+add_executable(ArduinoGame main.cpp Nunchuck.cpp Engine.cpp Game.cpp Game.h)
