Added various paths to cmakelists to satisfy ide

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,4 +37,9 @@ add_custom_target(
     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
+include_directories("$ENV{HOME}/.platformio/packages/framework-arduinoavr/libraries/Wire/")
+include_directories("lib/digitalWriteFast")
+include_directories("lib/MI0283QT9")
+include_directories("lib/GraphicsLib")
+
 add_subdirectory (src)
