BaseGame entity added and created testobject, ShapeRenderer is not implemented in this version, when it is implemented include it in the CPP files.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,4 +8,6 @@ add_executable(ArduinoGame
         Vector3.cpp
         Level.cpp
         Level/TestLevel.cpp
+		BaseEntity.cpp
+		Entity/TestEntity.cpp
 )
