Created keyboard and highscores

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,4 +15,4 @@ add_executable(ArduinoGame
         Entity/Asteroid.cpp
         Random.cpp
         Score.cpp
-        Level/GameOver.cpp Level/GameOver.h)
+        Level/GameOver.cpp Level/GameOver.h Keyboard.cpp Keyboard.h Highscore.h)
