--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,7 +2,7 @@ add_executable(ArduinoGame
         main.cpp
         Engine.cpp
         Game.cpp
-        Matrix4.cpp
+       # Matrix4.cpp
         Nunchuck.cpp
         Vector2.cpp
         Vector3.cpp
