turned _default_velocity into a define in bullet.cpp DEFAULT_VELOCITY, added bullet.cpp to the CMakeList

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,6 +13,7 @@ add_executable(ArduinoGame
         ShapeRenderer.cpp
         Entity/Player.cpp
         Entity/Asteroid.cpp
+		Entity/Bullet.cpp
         Random.cpp
         Score.cpp
         Level/GameOver.cpp Level/GameOver.h Keyboard.cpp Keyboard.h Highscore.h)
